# choreography

./: .gitignore  README.md  choreography.cabal  d-tree-csv.py  draft.md  experiments.ods
app/: DTreeData.hs  Experiment.hs  HsSemantics.hs  Main.hs  PySemantics.hs  RandomCho.hs  Search.hs
circuits/: FP-add_beaver.cho  FP-add_gmw.cho  adder64_beaver.cho  adder64_gmw.cho  adder_1.txt  adder_10.txt  adder_11.txt  adder_12.txt  adder_13.txt  adder_14.txt  adder_15.txt  adder_16.txt  adder_17.txt  adder_18.txt  adder_19.txt  adder_2.txt  adder_20.txt  adder_21.txt  adder_22.txt  adder_23.txt  adder_24.txt  adder_25.txt  adder_26.txt  adder_27.txt  adder_28.txt  adder_29.txt  adder_3.txt  adder_30.txt  adder_31.txt  adder_32.txt  adder_4.txt  adder_5.txt  adder_6.txt  adder_7.txt  adder_8.txt  adder_9.txt  divide64_beaver.cho  divide64_gmw.cho  less_than_1.txt  less_than_10.txt  (+32 more)
citations/: A Core Calculus for Equational Proofs of Cryptographic.md  A Higher-Order Indistinguishability Logic for Cryptographic Reasoning.md  OWL  Compositional Verification of Security Protocols.md  information-flow-types-for-homomorphic-encryptions.md
examples/: 1of4OT.cho  2partyBeaver.cho  3party2andGMW.cho  3partyBeaver.cho  3partyXOR.cho  GMW_macros.cho  GMW_macros_errors.cho  adder_32.cho  adder_8.cho  adder_generator.py  d-tree-csv.py
gitignore/circuit_results/: demo_16-10-2023_19:34:10.csv  demo_16-10-2023_19:35:17.csv  demo_16-10-2023_20:48:38.csv
graphs/: Adder Circuit Results.ipynb  make_graphs.py
paper/: full_figures.tex  main.tex  refs.bib
python/: P-value Analysis.ipynb  adder_generator.py  beaver_circuit_generator.py  bristol_adder_generator.py  bristol_lt_generator.py  build_sankey.ipynb  circuit_experiment.py  circuit_generator.py  d-tree-csv.py  data_recovery.ipynb  gmw_circuit_generator.py  p_val_cliff_experiment.py
python/cho_builder/: __main__.py  beaver.py  circuit_generator.py  core.py
results/: box3d.ipynb
snippits/: dtree.py  header.py
src/: Choreography.hs  Circuit.hs  GMW.hs  Python.hs  Utils.hs
src/Choreography/: AbstractSyntaxTree.hs  CoreSemantics.hs  DecisionTree.hs  EasySyntaxTree.hs  Flatten.hs  Functors.hs  Metadata.hs  Parser.hs  Party.hs  Python.hs  Random.hs  Semantics.hs  Validate.hs
src/Polysemy/: Random.hs
tests/: TCircuits.hs  TPython.hs  Tests.hs
