cabal-version:      2.4
name:               choreography
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
description: "See README.md"

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         33739499+ShapeOfMatter@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common basic-config
    default-language: Haskell2010
    build-depends:    base ^>=4.14.3.0
                     ,Cabal ^>= 3.6
                     ,containers ^>= 0.6
                     ,deepseq >=1.1 && <1.5
                     ,distributive ^>= 0.6.2
                     ,parsec >= 3.1.0
                     ,polysemy ^>= 1.9
                     ,process >=1.1.0.2 && <1.7
                     ,QuickCheck ^>= 2.14
                     ,template-haskell >= 2.16.0.0
    ghc-options:
      -Wall
      -fprint-potential-instances
      -package=polysemy
      -package=polysemy-plugin
      -fplugin=Polysemy.Plugin
      -- I think it also needed `cabal install --lib polysemy-plugin`?
    default-extensions: AllowAmbiguousTypes
                       ,BangPatterns
                       ,BlockArguments
                       ,DataKinds
                       ,FlexibleContexts
                       ,FlexibleInstances
                       ,FunctionalDependencies
                       ,GADTs
                       ,GeneralizedNewtypeDeriving
                       ,LambdaCase
                       ,MultiParamTypeClasses
                       ,NamedFieldPuns
                       ,PolyKinds
                       ,QuantifiedConstraints
                       ,RankNTypes
                       ,ScopedTypeVariables
                       ,StandaloneDeriving
                       ,TemplateHaskell
                       ,TupleSections
                       ,TypeApplications
                       ,TypeOperators
                       ,TypeFamilies
                       ,UndecidableInstances

common lib-dependent
    import: basic-config
    build-depends: choreography

executable helloworld
    import: lib-dependent
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app

library
    import: basic-config
    exposed-modules:
      Choreography
      Choreography.AbstractSyntaxTree
      --Choreography.EasySyntaxTree
      Choreography.Parser
      Choreography.Party
      Choreography.Python
      Choreography.Semantics
      Choreography.Validate
      Distribution.TestSuite.QuickCheck
      Python
      Utils

    hs-source-dirs:   src

Test-Suite languageTests
    import: lib-dependent
    type:             detailed-0.9
    test-module:      Tests
    hs-source-dirs:   tests

Test-Suite pythonTests
    import: lib-dependent
    type:             detailed-0.9
    test-module:      TPython
    hs-source-dirs:   tests
